    lbdb_dotlock (instead of using mutt_dotlock) and use this option for
    the Debian package (Closes: #58188).
  * Update FSF address in copyrights.
  * Update dotlock code from mutt 1.1.12.
  * Use /usr/bin/awk instead of /usr/bin/mawk in the Debian package
    (/usr/bin/awk is handled by alternates mechanism to point to the
    "optimal" awk replacement).

 -- Roland Rosenfeld <roland@debian.org>  Mon,  8 May 2000 17:07:55 +0200

lbdb (0.18.5) unstable; urgency=low

  * Optimized m_gpg to use --with-colons.
  * Remove "Recommends: netstd" (Closes: #49397).
  * Add "Suggests: finger" and test in m_finger whether the finger command
    is available (don't do anything in m_finger, if finger isn't
    available).

 -- Roland Rosenfeld <roland@debian.org>  Sun,  7 Nov 1999 02:51:52 +0100

lbdb (0.18.4) unstable; urgency=low

  * Fixed typo in lbdb-fetchaddr.man.
  * Fixed typo on lbdbq.man (Closes: #48143).

 -- Roland Rosenfeld <roland@debian.org>  Sun, 24 Oct 1999 02:45:46 +0200

lbdb (0.18.3) unstable; urgency=low

  * m_gpg no longer writes error messages to stderr, when the given search 
    string does not exist (Closes: #45422).

 -- Roland Rosenfeld <roland@debian.org>  Sat, 18 Sep 1999 20:40:02 +0200

lbdb (0.18.2) unstable; urgency=low

  * Added HP-UX support (by David Ellement <ellement@sdd.hp.com>): 
    - Try awk (in addition to mawk, gawk, nawk).
    - Don't use "if ! ..." in shell scripts, because ksh in HP-UX doesn't
      support this.
  * Make dotlock.c more portable.
  * Make Makefile.in much more portable.
  * Merge in changes of dotlock program from Mutt 0.96.6.
  * Upgraded Debian standards version to 3.0.1:
    - GPL now in /usr/share/common-licenses/
    - /usr/man -> /usr/share/man
  * Add -v and -h options to lbdbq and lbdb-fetchaddr which display the
    version of lbdb and a short help.

 -- Roland Rosenfeld <roland@debian.org>  Wed, 15 Sep 1999 11:42:19 +0200

lbdb (0.18.1) unstable; urgency=low
