@@ -1,6 +1,6 @@
 #! @SH@
-
-#     Copyright (C) 1998  Thomas Roessler <roessler@guug.de>
+#
+#     Copyright (C) 1998-2000  Thomas Roessler <roessler@guug.de>
 # 
 #     This program is free software; you can redistribute it and/or modify
 #     it under the terms of the GNU General Public License as published by
@@ -15,7 +15,7 @@
 #     You should have received a copy of the GNU General Public License
 #     along with this program; if not, write to the Free Software
 #     Foundation, Inc., 59 Temple Place - Suite 330, Boston, MA  02111, USA.
-
+#
 # $Id$
 
 prefix=@prefix@
