@@ -1,7 +1,9 @@
 #! @AWK@
-# -*-c-mode-*-
-
-#     Copyright (C) 1998  Thomas Roessler <roessler@guug.de>
+#
+# -*-awk-*-
+#
+#     Copyright (C) 1998-2000  Thomas Roessler <roessler@guug.de>
+#                        2000  Roland Rosenfeld <roland@spinnaker.de>
 # 
 #     This program is free software; you can redistribute it and/or modify
 #     it under the terms of the GNU General Public License as published by
@@ -16,23 +18,19 @@
 #     You should have received a copy of the GNU General Public License
 #     along with this program; if not, write to the Free Software
 #     Foundation, Inc., 59 Temple Place - Suite 330, Boston, MA  02111, USA.
-
+#
 # $Id$
 
-
-
 BEGIN {
-  FS = "	";
+    FS = "\t";
 }
 
 {
-  name[$1] = $2;
-  comm[$1] = $3;
+    line[$1] = $0;
 }
 
 END {
-  for (a in name)
-  {
-    printf("%s\t%s\t%s\n", a, name[a], comm[a]);
-  }
+    for (a in line) {
+	print line[a];
+    }
 }
